# BookStock

./: .gitignore  ReadMe.md  pyproject.toml  requierements.txt
core/: settings.py
stock/: admin.py
stock/models/: __init__.py  books.py
